# python_practicum

./: README.md  pyproject.toml
lab2/: README.md  ex_1.py  ex_2.py  ЛР_2 .docx
lab3/: README.md  ex_1.py  ex_2.py  ex_3.py  ЛР_3.docx
lab4/: README.md  ЛР_4.docx
lab4/game/: arcada_main.py  game_help.py  gameclass.py  level_config.py
