[project]
name = "python-practicum"
version = "0.1.0"
description = ""
authors = [
    {name = "Ioplock",email = "ioplock.me@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
